<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrol_servers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".BahubaliActivity">


    <TextView
        android:id="@+id/title_bahubali"
        android:layout_width="390dp"
        android:layout_height="65dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/test"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/l10_bahubali"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_style"
        android:text="@string/l10"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/user_test2_bahubali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/l12_bahubali"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_style"
        android:text="@string/l12"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/user_test2_bahubali"
        app:layout_constraintEnd_toStartOf="@+id/l123_bahubali"
        app:layout_constraintHorizontal_bias="0.110"
        app:layout_constraintStart_toEndOf="@+id/l10_bahubali" />

    <Button
        android:id="@+id/burnin_bahubali"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_style"
        android:text="@string/burnin"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/user_test2_bahubali"
        app:layout_constraintEnd_toStartOf="@+id/l123_bahubali"
        app:layout_constraintHorizontal_bias="0.930"
        app:layout_constraintStart_toEndOf="@+id/l10_bahubali" />

    <Button
        android:id="@+id/l123_bahubali"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_style"
        android:text="@string/l123"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/user_test2_bahubali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_test2_bahubali"
        android:layout_width="355dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/choose"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrol_serverss_bahubali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/bahubali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_server_bahubali">

        <LinearLayout
            android:id="@+id/linearLayout1_bahubali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>

    <SearchView
        android:id="@+id/search_server_bahubali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search"
        android:queryHint="@string/Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_test2_bahubali" />

    <Button
        android:id="@+id/scan_server"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="@+id/scrol_serverss_bahubali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/search_server_bahubali"
        app:layout_constraintTop_toBottomOf="@+id/user_test2_bahubali"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>