<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picture_background"
    tools:context=".LoginActivity">


    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:background="@drawable/button_style"
        android:text="@string/log_in"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:background="@drawable/search"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:background="@drawable/search"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>